infrastructure/storage/longhorn/longhorn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  labels:
    toolkit.fluxcd.io/tenant: sre-team
