infrastructure/storage/longhorn/longhorn-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ii-nz-letsencrypt-prod
  name: longhorn-ii-nz
  namespace: longhorn
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.ii.nz
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - longhorn.ii.nz
